tests/ui/consts/const-eval/ub-upvars.64bit.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/ub-upvars.rs:6:1
   |
LL | const BAD_UPVAR: &dyn FnOnce() = &{
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value at .<deref>.<dyn-downcast>.<captured-var(bad_ref)>: encountered a null reference
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 16, align: 8) {
               ╾ALLOC0╼ ╾ALLOC1╼ │ ╾──────╼╾──────╼
           }

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
